fix(Sleek): Make playlist play button visible

--- a/Sleek/user.css
+++ b/Sleek/user.css
@@ -298,7 +298,7 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
 
 /* Main Play Button Change */
 .main-playButton-PlayButton.main-playButton-primary {
-  color: var(--spice-button-text);
+  color: var(--spice-main);
   background-color: var(--spice-play-button);
   box-shadow: var(--spice-shadow) 0 5px 4px 0px;
   transition-duration: 0.15s !important;
